<resources>
    <string name="app_name">PaginasAmarillasApp</string>
    <string name="mis_p_ginas">Mis páginas</string>
    <string name="empresa">Empresa</string>
    <string name="esta_es_una_descripcion_de_la_empresa">Esta es una descripcion de la empresa</string>
    <string name="mz_m_lote_17_praderas">Mz M Lote 17 Praderas</string>
    <string name="_51_95785142">+51 95785142</string>
    <string name="esta_imagen_representa_el_logo_de_la_empresa">Esta imagen representa el logo de la empresa</string>
</resources>
