<?xml version="1.0" encoding="utf-8"?>


    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_view"
        android:layout_margin="15dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nombre_empresa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/empresa"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="30sp"
                    />

                <TextView
                    android:id="@+id/info_descripcion"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/esta_es_una_descripcion_de_la_empresa"
                    android:textSize="12sp"
                    />
                <TextView
                    android:id="@+id/direccion_empresa"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mz_m_lote_17_praderas"
                    />
                <TextView
                    android:id="@+id/telefono_empresa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/cardview_dark_background"
                    android:drawableStart="@drawable/ic_phone"
                    android:layout_marginTop="5dp"
                    android:drawablePadding="5dp"
                    android:text="@string/_51_95785142"
                    />


            </LinearLayout>

            <ImageView
                android:id="@+id/foto_empresa"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:contentDescription="@string/esta_imagen_representa_el_logo_de_la_empresa"
                android:layout_marginStart="25dp"
                android:layout_weight="1.7"
                android:src="@drawable/logo_1"
                />


        </LinearLayout>

    </android.support.v7.widget.CardView>

